# project_d

./: .dockerignore  .gitignore  Dockerfile  Procfile  data.json  datadump.json  docker-compose.prod.yml  docker-compose.yml  employee_learning_fixture.json  entrypoint.sh  gunicorn.service  manage.py  mydatabase.dump  pyproject.toml  requirements.txt  wait-for-db.sh
config/: settings.py  urls.py
config/settings/: base.py  development.py  production.py
employee_learning/: admin.py  forms.py  models.py  urls.py  views.py
employee_learning/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
staticfiles/css/: custom.37c5492c362d.css  custom.css
templates/: index.html  test.html
templates/account/: email.html  login.html  password_reset.html  signup.html
templates/allauth/layouts/: base.html
templates/base/: base.html  css_link.html  footer.html  navbar.html
templates/employee_learning/: course_create.html  course_delete.html  course_detail.html  course_list.html  course_update.html
templates/socialaccount/snippets/: login.html  provider_list.html
test_app/: urls.py  views.py
user_profile/: models.py
user_profile/migrations/: 0001_initial.py
